I defaulted ValidationComponent to visible = true now.

--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -36,7 +36,9 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <RepositoryUrl>https://github.com/DataJuggler/DataJuggler.Blazor.Components.git</RepositoryUrl>
     <RepositoryType>Git - Git Hub</RepositoryType>
     <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
-    <PackageReleaseNotes>12.2.2022: Attempting to have the ValidationComponent also SelectAll when it gets focus. Making it easier
+    <PackageReleaseNotes>12.3.2022: I realized today I did not have Visible defaulting to true on the ValidationComponent.
+
+12.2.2022: Attempting to have the ValidationComponent also SelectAll when it gets focus. Making it easier
 to change existing text. I also added a property Visible and a Property for Display. The css class 
 named DisplayStyle is set to none if Visible = false, else Display is used. The default display
 if nothing is set is inline-block.
@@ -276,7 +278,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>7.2.3</Version>
+    <Version>7.2.4</Version>
     <AssemblyVersion>7.1.14</AssemblyVersion>
     <FileVersion>7.1.14</FileVersion>
     <Nullable>disable</Nullable>
