--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -36,7 +36,10 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <RepositoryUrl>https://github.com/DataJuggler/DataJuggler.Blazor.Components.git</RepositoryUrl>
     <RepositoryType>Git - Git Hub</RepositoryType>
     <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
-    <PackageReleaseNotes>12.5.2022: I added an EditZIndex property to the grid. So the validation component used to edit has a z index.
+    <PackageReleaseNotes>12.10.2022: I added a ShowCaption parameter to the ValidationComponent. If the Caption parameter is set,
+ShowCaption is set to true, else the caption will not show.
+
+12.5.2022: I added an EditZIndex property to the grid. So the validation component used to edit has a z index.
 
 12.4.2022 C: I updated DataJuggler.Excelerate to the latest version which includes Row.FindColumnById.
 
@@ -288,7 +291,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>7.2.9</Version>
+    <Version>7.2.10</Version>
     <AssemblyVersion>7.1.14</AssemblyVersion>
     <FileVersion>7.1.14</FileVersion>
     <Nullable>disable</Nullable>
