--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -39,6 +39,7 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <PackageReleaseNotes>12.11.2022: I changed the way Height &amp; Width work again for the ValidationComponent. I over complicated this at first by having
 TextBoxHeight / Width and a Control Height / Width. Now the Height &amp; Width is applied to the TextBox.
 I added a HeightUnit property. I also added two parameter properties: ExternalId and ExternalIdDescription.
+NamedParameter also added the same two properties, and the values are set when the Enter key is pressed.
 
 12.10.2022: I added a ShowCaption parameter to the ValidationComponent. If the Caption parameter is set,
 ShowCaption is set to true, else the caption will not show.
@@ -297,7 +298,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>7.2.16</Version>
+    <Version>7.2.17</Version>
     <AssemblyVersion>7.1.14</AssemblyVersion>
     <FileVersion>7.1.14</FileVersion>
     <Nullable>disable</Nullable>
