I now use the column.ZIndex to the set the ZIndex in a grid instead of Grid.EditZIndex.

--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -42,7 +42,8 @@ I added a HeightUnit property. I also added two parameter properties: ExternalId
 NamedParameter also added the same two properties, and the values are set when the Enter key is pressed.
 A added a 'SendAllTextToParent' boolean property to the ValidationComponent. I also added a method
 SetTextColor. I added a Refresh method to the ImageButton. I added an EditorClassName to the column object
-so you can style columns.
+so you can style columns. I now use Column.ZIndex for the ZIndex for the edit display control. I removed
+the EditZIndex property from the Grid.
 
 12.10.2022: I added a ShowCaption parameter to the ValidationComponent. If the Caption parameter is set,
 ShowCaption is set to true, else the caption will not show.
@@ -301,7 +302,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>7.2.22</Version>
+    <Version>7.2.23</Version>
     <AssemblyVersion>7.1.14</AssemblyVersion>
     <FileVersion>7.1.14</FileVersion>
     <Nullable>disable</Nullable>
@@ -352,7 +353,7 @@ Now is the time to break anything.
 
   <ItemGroup>
     <PackageReference Include="BlazorStyled" Version="3.1.0" />
-    <PackageReference Include="DataJuggler.Excelerate" Version="7.1.5" />
+    <PackageReference Include="DataJuggler.Excelerate" Version="7.1.6" />
     <PackageReference Include="DataJuggler.UltimateHelper" Version="7.0.0" />
   </ItemGroup>
 
