--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -310,7 +310,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>7.3.0</Version>
+    <Version>7.3.2</Version>
     <AssemblyVersion>7.1.14</AssemblyVersion>
     <FileVersion>7.1.14</FileVersion>
     <Nullable>disable</Nullable>
@@ -336,11 +336,11 @@ Now is the time to break anything.
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;BL0007;</NoWarn>
+    <NoWarn>1701;1702;BL0007;IDE0059;IDE0017;IDE0090;</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <NoWarn>1701;1702;BL0007;</NoWarn>
+    <NoWarn>1701;1702;BL0007;IDE0059;IDE0017;IDE0090;</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
