Added a Row and Column objec to use the Validation Component.

--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -40,6 +40,8 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
     <PackageReleaseNotes>12.17.2022: I added an AutoComplete parameter to the ValidationComponent.
 Trying to prevent browsers from filling in forms if you set this to false.
+Also added Float Left to the Label and TextBox so that they stay inline better.
+
 
 12.16.2022: The ComboBox was defaulting to TextSizeEnum.Large. I fixed this to
 use the TextSize default setting of Medium. 
@@ -310,7 +312,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>7.3.4</Version>
+    <Version>7.3.5</Version>
     <AssemblyVersion>7.1.14</AssemblyVersion>
     <FileVersion>7.1.14</FileVersion>
     <Nullable>disable</Nullable>
