--- a/DataJuggler.Blazor.Components.csproj
+++ b/DataJuggler.Blazor.Components.csproj
@@ -38,7 +38,9 @@ http://circle.firchow.net/ by Andre Firchow, and his blog is here: http://fircho
     <RepositoryUrl>https://github.com/DataJuggler/DataJuggler.Blazor.Components.git</RepositoryUrl>
     <RepositoryType>Git - Git Hub</RepositoryType>
     <PackageTags>Blazor,C#,UI,Components,ProgressBar,Animation,BlazorStyled,ValidationComponent</PackageTags>
-    <PackageReleaseNotes>June 2, 2023: I added an Enabled property and a method SetEnabled to the validation component.
+    <PackageReleaseNotes>June 3, 2023: My first attempt at Disabled for the Validation Component was wrong. I think my fix will work. Testing now.
+
+June 2, 2023: I added an Enabled property and a method SetEnabled to the validation component.
 If Enabled is false, disabled will appear in the input objects and be read only.
 
 May 12, 2023: I updated the validation message to do a replace on Caption if it has colons in it. So you
@@ -353,7 +355,7 @@ Now is the time to break anything.
 1.0.1 - I added a Sprite component.
 
 1.0.0 This is the first version I am releasing along with a Sample.</PackageReleaseNotes>
-    <Version>7.7.6</Version>
+    <Version>7.7.7</Version>
     <AssemblyVersion>7.5.5</AssemblyVersion>
     <FileVersion>7.5.5</FileVersion>
     <Nullable>disable</Nullable>
